[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "scikit-build>=0.13",
    "ninja>=1.10.0",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
build = "cp310-*"  # Only build Python 3.10 wheels
skip = ["pp*", "*musllinux*"]  # disable PyPy and musl-based wheels

[tool.cibuildwheel.linux]
before-all = "yum update && yum install opencv-devel eigen3-devel -y"
