[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "scikit-build>=0.13",
    "ninja>=1.10.0",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
build = "cp310-*"  # Only build Python 3.10 wheels
skip = ["pp*", "*musllinux*"]  # disable PyPy and musl-based wheels
manylinux-x86_64-image = "ghcr.io/akaszynski/manylinux2014_x86_64_opencv3:v3.4.5"